# mprpc

./: CMakeLists.txt  autobuild.sh  test.conf
example/callee/: CMakeLists.txt  friendservice.h  main.cc  userservice.h
example/caller/: CMakeLists.txt  calleruserservice.cc  friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
log/: 2021-12-08.txt
src/: logging.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.pb.cc  rpcprovider.cc
src/include/: lockqueue.h  logging.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcheader.pb.h  rpcheader.proto  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
